6:30pm 12/2 Clark- Added basic functionality to understand and validate command line arguments in bank-main.c.